Search for 'previous' word in message preview behaves like 'next'
Steps to reproduce:
In Evolution, open any email by double-clicking on it (so that the email appears in a separate window). Press Ctrl-Shift-F to bring up a search box at the bottom of the screen (allowing you to search for words in an email). Type in a word that appears at least three times in the email, and press Return, then start using the "Previous" and "Next" buttons next to it.
Expected behaviour: the "Next" button jumps to the next occurrence of that word in the email; the "Previous" button jumps to the previous occurrence of that word in the email.
Actual behaviour: the "Next" button acts as expected, but the "Previous" button acts identically to the "Next" button, moving to the next (rather than previous) occurrence of that word in the email.
I use Evolution 3.28.5 as packaged by Ubuntu, but commentors on the Ubuntu bug tracker report have confirmed that the bug still exists on 3.30.5.