I#318 - Search for 'previous' word in message preview behaves like 'next'

Closes https://gitlab.gnome.org/GNOME/evolution/issues/318